--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="stylesheet" href="index.css" />
-    <title>FooodVill</title>
+    <title>Foodie Destination</title>
 
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
   </head>
